# github-yaml-modifier

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
